# rtos_bsed_industrial_saftey_monitoring_syatem

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
doc/: REVIEW  RTOS_Presentation_Final year.pptx
rtos_firmware/: BUG_FIX_34_35_REPORT.md  BUTTON_CONTROL_IMPLEMENTATION.md  BUTTON_CONTROL_QUICK_REFERENCE.md  CMakeLists.txt  COMPILATION_FIX_SUMMARY.md  CONTROL_FLOW_DIAGRAM.md  HARDWARE_CONFIG_ANALYSIS.md  OLED_WEB_CONFIG_CHANGES.md  QUICK_FIX_SUMMARY.md  TESTING_TROUBLESHOOTING_GUIDE.md  TODO.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig_patch.txt
rtos_firmware/main/: CMakeLists.txt  ISMS_MQTT_v8_0_RTOS_PERF.c  isms_web_server.c  isms_web_server.h
rtos_firmware/spiffs_image/: index.html
